# osdci-pipeline

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml  requirements.txt
models/: baseline_results.json  feature_importances.csv
osdci/: __init__.py  cloud_regions.py  features.py  grid.py
scripts/: aggregate_labels.py  assemble_features.py  build_grid.py  compute_climate_features.py  compute_critical_habitat_features.py  compute_egrid_features.py  compute_eia860_features.py  compute_eia861_industrial_price.py  compute_ejscreen_features.py  compute_final_scores.py  compute_impervious_features.py  compute_ixp_distance.py  compute_nearby_generation.py  compute_nlcd_features.py  compute_nri_features.py  compute_padus_features.py  compute_population_features.py  compute_proximity_features.py  compute_slope_features.py  compute_substation_distance.py  compute_tribal_features.py  compute_tx_distance.py  compute_water_stress_features.py  compute_wetland_features.py  export_to_app.sh  ingest_im3.py  train_baseline.py
scripts/archive/: scrape_dcmap.py
