[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "osdci"
version = "0.1.0"
description = "Open Source Data Center Intelligence — geospatial ML pipeline for data center siting"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
keywords = ["data centers", "geospatial", "machine learning",
             "infrastructure", "siting", "H3", "LightGBM"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: GIS",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["osdci*"]
